--- a/UnderCheat.csproj
+++ b/UnderCheat.csproj
@@ -83,7 +83,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>libs\UnityEngine.UIModule.dll</HintPath>
     </Reference>
-
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -92,11 +91,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API.cs" />
-    <Compile Include="Cheats.cs" />
+    <Compile Include="Cheats\Cheats.cs" />
+    <Compile Include="Cheats\Damage.cs" />
+    <Compile Include="ConfigOpener.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\HUDControl.cs" />
