--- a/UnderCheat.csproj
+++ b/UnderCheat.csproj
@@ -39,6 +39,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>libs\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="BehaviorDesigner, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="BepInEx, Version=5.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>libs\BepInEx.dll</HintPath>
