--- a/UnderCheat.csproj
+++ b/UnderCheat.csproj
@@ -95,7 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API.cs" />
-    <Compile Include="Cheats\Cheats.cs" />
+    <Compile Include="Cheats\CheatManager.cs" />
     <Compile Include="Cheats\Damage.cs" />
     <Compile Include="ConfigOpener.cs" />
     <Compile Include="Project.cs" />
